--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elite-water-api",
+  "name": "gofer-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -32,7 +32,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.20",
+    "redis": "^4.5.1",
     "socket.io": "^4.5.3",
-    "stripe": "^11.1.0"
+    "stripe": "^11.1.0",
+    "util": "^0.12.5"
   }
 }
